assets/css/styles.css
/*----------------------------------------------- Global ---------*/

@import url('https://fonts.googleapis.com/css?family=Open+Sans|Pacifico');

body {
    font-family: 'Open Sans', sans-serif;
    background-color: rgb(174, 174, 174);
}

.text-uppercase {
    text-align: center;
}

.jumbotron {
    background-color: transparent;
}

.transparent-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(174, 174, 174, 0.70);
}

.h1,
.h4,
h1,
h4 {
    margin: 1rem;
}

html,
body {
    max-width: 100%;
    overflow-x: hidden;
}

/*----------------------------------------------- Bootstrap overides ---*/

.media {
    padding: 10px;
}

.navbar-dark {
    background-color: rgba(74, 72, 72, 0.7)!important;
    /* override the bootstrap navbar background color */
}

.h2,
h2 {
    font-weight: bold;
    margin: 1rem;
}

.row {
    padding: 15px;
  
}

/*----------------------------------------------- Containers -----*/

.navbar-container {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
}

.home-container {
    height: 100vh;
    background: url(../images/bg.png) no-repeat center center fixed;
    display: flex;
}

.gigs-container {
    background: url("../images/studio.jpg") no-repeat center center fixed;
}

.contact-container {
    background: url("../images/paint-splash.jpg") no-repeat center center fixed;
}

.generic-container {
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    align-items: center;
    justify-content: center;
    position: relative;
}

/*----------------------------------------------- Navbar ---------*/

nav img {
    width: 50px;
    height: 50px;
    border-radius: 10px;
    margin-left: 10px;
}

.navbar-dark .navbar-nav .nav-link {
     color: #fff; 
}

.navbar-dark .navbar-toggler {
    border: none;
}

/*----------------------------------------------- Home ---------*/

.band-name {
    font-weight: bold;
    font-size: 60px;
    font-family: 'Pacifico', sans-serif;
    margin-top: 30rem;
}

.home i {
    font-size: 60px;
}

/*----------------------------------------------- About ---------*/

.about img {
    margin-bottom: 10px;
}

.name {
    font-weight: bold;
}

/*----------------------------------------------- Gigs ---------*/

.gigs {
    margin-left: 20px;
    margin-right: 20px;
}

.row .gigs-col {
    text-align: center;
    background-color: rgba(224, 224, 225, .80);
    border-radius: 15px;
}

.gig-text {
    padding: 5px;
}

/*----------------------------------------------- Media ---------*/

.my-media {
    margin-left: 20px;
    margin-right: 20px;
}

.media-body {
    margin-top: 10px;
}

.my-media p {
    text-align: center;
    font-size: 20px;
    color: white;
    padding: 10px;
}

.embed-soundcloud {
    width: 100%;
    height: 166px;
    border: none;
}

/*----------------------------------------------- Contact ---------*/

.label {
    font-weight: bolder;
}

/*----------------------------------------------- Footer ----------*/

.footer-container {
    padding: 20px;
}

.copyrite {
    text-align: left;
}

.social {
    text-align: right;
}

.social a {
    color: rgba(0,0,0,0.75);
    padding: 7px;
}

.social a:hover {
    color: rgba(0,0,0,0.50);
    text-decoration: none;
}

.social-links .ul {
    display: flex;
    list-style: none;
}

/*----------------------------------------------- Media Queries ----*/


@media screen and (max-width: 767px) {
    .copyrite {
        text-align: center;
    }
}

@media screen and (max-width: 767px) {
    .social {
        text-align: center;
    }
}

